Changelog
=========


(unreleased)
------------
- Addded assert_exists to Folder. [lgblkb]
- Added local dev tools. [lgblkb]
- Updated DataSet. [lgblkb]
- Update versioning. [lgblkb]
- Update ChangeLog. [lgblkb]
- Fix versioning. [lgblkb]
- Update requirements.txt. [lgblkb]
- Added get_dist_info. [lgblkb]
- Update requirements. [lgblkb]
- Updated Plotter. [lgblkb]
- Fix issue. [lgblkb]
- Removed dev_script.py. Added taskipy. [lgblkb]
- Updated Plotter to plot both images and line plots. [lgblkb]
- Updated Plotter to plot both images and line plots. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.14 → 1.1.15. [lgblkb]
- Cleanup and optimize imports. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.13 → 1.1.14. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Added Plotter to lgblkb_tools. [lgblkb]
- Added GdalMan to lgblkb_tools. [lgblkb]
- Fix format warnings. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.12 → 1.1.13. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Added r() and nr() to Folder to quickly switch between reactive and
  non-reactive behavior. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.11 → 1.1.12. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Updated lgblkb_tools. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.10 → 1.1.11. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Made gdal optional. [lgblkb]
- Update requirements.txt. [Dias]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.9 → 1.1.10. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Updated gdal_datasets.py. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.8 → 1.1.9. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.7 → 1.1.8. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Fixed bug with unzipping using subdirs. [lgblkb]
- Fixed bug with unzipping using subdirs. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.6 → 1.1.7. [lgblkb]
- Updated requirements.txt. [lgblkb]