@@ -1,6 +1,6 @@
 attrs==19.3.0
 bumpversion==0.5.3
-certifi==2020.4.5.1
+certifi==2020.4.5.2
 cffi==1.14.0
 chardet==3.0.4
 checksumdir==1.1.7
